--- a/css/styles.css
+++ b/css/styles.css
@@ -6,15 +6,40 @@
   width: 50%;
 }
 
-.navbar li {
-  display: inline;
-  float: right;
-  background-color: green;
+header {
+  background-color: #06D6A0;
+  width: 100%;
+  height: 60px;
 }
 
-.nav-item li {
-  display: inline;
+.logo {
+  float: left;
+}
+
+.navbar {
   float: right;
+}
+
+.nav-item {
+  display: inline-block;
+}
+
+.container {
+  max-width: 900px;
+  margin: auto;
+}
+
+.cats-image {
+  float: left;
+}
+
+.cats-image img {
+  width: 60%;
+}
+
+.cats-content {
+  float: left;
+  width: 40%;
 }
 
 /*.container {
